--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,69 @@
 
-@import url('./animations.css');
+/* @import url('./animations.css'); */
+
+* {
+    box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+}
+.form {
+    display: flex;
+    width: 371px;
+    height: 40px;
+    margin: 36px auto;
+}
+
+.form-label {
+    display: block;
+    width: 272px;
+    height: 100%;
+    margin-right: 8px;
+}
+
+.form-input {
+    width: 100%;
+    height: 100%;
+    padding: 8px 16px;
+    border-radius: 4px;
+    border: 1px solid #808080;
+    font-weight: 400;
+    color: #2e2f42;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:hover {
+    border: 1px solid #000;
+}
+
+.form-input:focus {
+    outline: none;
+    border: 1px solid #4e75ff;
+}
+
+.form-input::placeholder {
+    font-weight: 400;
+    color: #808080;
+}
+
+.form-button {
+    width: 91px;
+    height: 100%;
+    border-radius: 8px;
+    padding: 8px 16px;
+    width: 91px;
+    height: 40px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #4e75ff;
+    border: none;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-button:hover {
+    background-color: #6c8cff;
+}
 
 
