--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 
-/* @import url('./animations.css'); */
+/* ---------------------------Form------------------------------ */
 
 * {
     box-sizing: border-box;
@@ -12,7 +12,7 @@
     display: flex;
     width: 371px;
     height: 40px;
-    margin: 36px auto;
+    margin: 36px auto 28px;
 }
 
 .form-label {
@@ -66,4 +66,72 @@
     background-color: #6c8cff;
 }
 
+/* ---------------------------Gallery------------------------------ */
 
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    max-width: 1158px;
+    padding: 4px 15px;
+    margin: 0 auto;
+}
+
+.gallery-item {
+    position: relative;
+    width: 360px;
+    height: 200px;
+    border: 1px solid #808080;
+    list-style-type: none;
+    cursor: pointer;
+    transition: transform .4s ease;
+}
+
+.gallery-item:hover,
+.gallery-item:focus {
+    transform: scale(1.0444, 1.04);
+}
+
+.gallery-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.gallery-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.wrapper {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    padding: 4px 25px 4px 20px;
+    width: 100%;
+    height: 48px;
+    background-color: #fff;
+}
+
+.info-list {
+    list-style-type: none;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33333;
+    color: #2e2f42;
+}
+
+.info-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    color: #2e2f42;
+    margin: 0;
+}
+
+.iziToast-message {
+    width: 432px;
+    /* height: 88px; */
+}
